# gitita

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/: prompt.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: ai-review.yml  codex-issue-automation.yml  preview.yml  publish.yml  review.yml
articles/sample/: article.md
docs/ai/: ARCHITECTURE.md  DECISIONS.md  QIITA_REVIEW_RULES.md  SKILLS.md  TESTING.md
docs/uml/: all_conf.puml  components.puml  publish_flow.puml  sequence.puml  state.puml
tests/: cli.rs  publish_e2e_real.rs
tests/fixtures/frontmatter-invalid/articles/empty-author/: article.md
tests/fixtures/frontmatter-invalid/articles/empty-qiita-id/: article.md
tests/fixtures/frontmatter-invalid/articles/missing-title/: article.md
tests/fixtures/frontmatter-invalid/articles/tags-not-array/: article.md
tests/fixtures/frontmatter-invalid/articles/unsupported-published/: article.md
tests/fixtures/frontmatter-valid/articles/valid-article/: article.md
tests/fixtures/markdown-invalid/articles/unsafe-path/: article.md
tests/fixtures/markdown-invalid/articles/unsupported-image/: article.md
tests/fixtures/markdown-valid/articles/markdown-images/: article.md
tests/fixtures/publish-update/articles/published-article/: article.md
tools/src/: diff.rs  lib.rs  main.rs  markdown.rs  qiita.rs
tools/src/application/: check.rs  mod.rs  publish.rs
tools/src/domain/: frontmatter.rs
tools/src/infrastructure/: filesystem.rs
tools/src/interface/: cli.rs
tools/src/workflow/: mod.rs
