[package]
name = "gitita"
version = "0.1.0"
edition = "2021"

[lib]
path = "tools/src/lib.rs"

[[bin]]
name = "gitita"
path = "tools/src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
