[package]
name = "gitita"
version = "0.1.0"
edition = "2021"

[lib]
path = "tools/src/lib.rs"

[[bin]]
name = "gitita"
path = "tools/src/main.rs"

[dependencies]
pulldown-cmark = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
